--- a/app/src/main/res/layout/fragment_classif.xml
+++ b/app/src/main/res/layout/fragment_classif.xml
@@ -10,35 +10,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/home_bule"
-        android:paddingTop="@dimen/padding_top">
-    </LinearLayout>
+        android:paddingTop="@dimen/padding_top"></LinearLayout>
 
     <include layout="@layout/toolbar_layout" />
 
     <View
-        android:background="@color/line_color"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp" />
+        android:layout_height="10dp"
+        android:background="@color/board" />
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
         <ListView
             android:id="@+id/left_listview"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:scrollbars="none"
-            android:divider="@null"/>
+            android:background="@color/board"
+            android:divider="@null"
+            android:scrollbars="none" />
 
         <ListView
             android:id="@+id/right_listView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="5"
-            android:background="@android:color/white"/>
+            android:layout_weight="6"
+            android:background="@android:color/white"
+            android:divider="@null" />
     </LinearLayout>
 
 
