--- a/app/src/main/res/layout/item_lvright.xml
+++ b/app/src/main/res/layout/item_lvright.xml
@@ -4,18 +4,20 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical"
-    android:padding="@dimen/dp6">
+    android:padding="5dp">
 
     <LinearLayout
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
+            android:layout_marginLeft="10dp"
             android:id="@+id/imageItem"
-            android:layout_width="@dimen/dp50"
-            android:layout_height="@dimen/dp50"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:scaleType="fitXY"
-            android:src="@drawable/home_icon"/>
+            android:src="@mipmap/load_faile"/>
 
         <TextView
             android:text="香酥蛋卷店"
@@ -45,22 +47,28 @@
     </LinearLayout>
 
     <LinearLayout
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_height="wrap_content">
+        android:layout_height="110dp">
 
         <ImageView
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/shop_img"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:scaleType="centerCrop"
+            android:src="@mipmap/pinglun"
+            android:layout_marginLeft="10dp"
             android:background="@color/home_read"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="120dp" />
-
-        <ImageView
-            android:layout_marginLeft="@dimen/dp10"
-            android:background="@color/home_read"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="120dp" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
