--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
 
     <!-- 钱的颜色 -->
     <color name="textMoney">#ff6130</color>
+    <!--分类背景颜色-->
+    <color name="bg_classif">#F84F4D</color>
 
     <!-- 文字的颜色 -->
     <color name="textBlack">#161c16</color>
