--- a/app/src/main/res/layout/fragment_lookshop.xml
+++ b/app/src/main/res/layout/fragment_lookshop.xml
@@ -12,16 +12,18 @@
         android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!--<com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout-->
-            <!--android:id="@+id/tw_mydeco_apply"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent">-->
+        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+            android:id="@+id/tw_mylook"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_looksp"
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        <!--</com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>-->
+        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
     </RelativeLayout>
 
 
@@ -32,6 +34,5 @@
         android:layout_centerInParent="true"
         android:src="@mipmap/nomessage"
         android:visibility="gone" />
-
 
 </RelativeLayout>
