--- a/core/src/main/res/layout/customprogressdialog.xml
+++ b/core/src/main/res/layout/customprogressdialog.xml
@@ -4,11 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/loadingImageView"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_centerInParent="true"
-        android:layout_margin="10dp"
-        android:background="@drawable/progress_round" />
+    <!--<ImageView-->
+    <!--android:id="@+id/loadingImageView"-->
+    <!--android:layout_width="60dp"-->
+    <!--android:layout_height="60dp"-->
+    <!--android:layout_centerInParent="true"-->
+    <!--android:layout_margin="10dp"-->
+    <!--android:background="@drawable/progress_round" />-->
+
+
+    <ProgressBar
+        android:id="@+id/loading_process"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="false"
+        android:indeterminateDrawable="@drawable/dialog_style" />
+
 </RelativeLayout>
