--- a/app/src/main/res/layout/activity_productdetails.xml
+++ b/app/src/main/res/layout/activity_productdetails.xml
@@ -92,15 +92,14 @@
                         android:text="¥25"
                         android:textColor="@color/home_read"
                         android:textSize="14sp" />
-
                     <LinearLayout
                         android:id="@+id/ll_profenxinag"
+                        android:layout_centerInParent="true"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:gravity="center"
                         android:orientation="horizontal">
-
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
