--- a/app/src/main/res/layout/activity_my_guanzhu.xml
+++ b/app/src/main/res/layout/activity_my_guanzhu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:id="@+id/ll_myattention"
@@ -8,26 +8,46 @@
     android:background="@color/board"
     tools:context="com.xingguang.localrun.maincode.mine.view.activity.MyGuanzhuActivity">
 
-    <include layout="@layout/toolbar_layout" />
+    <include
+        android:id="@+id/tools"
+        layout="@layout/toolbar_layout" />
 
     <View
+        android:id="@+id/view1"
+        android:layout_below="@+id/tools"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
+        android:layout_height="1dp"
         android:background="@color/fengexian" />
 
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
+        android:id="@+id/rl_bg"
         android:background="@color/white"
+        android:layout_below="@+id/view1"
+        android:visibility="visible"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_attention"
+        android:layout_height="match_parent">
+        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
+            android:id="@+id/tw_refresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
 
-    </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_attention"
+                android:overScrollMode="never"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
+    </RelativeLayout>
 
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/empty"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/nomessage"
+        android:visibility="gone" />
+
+</RelativeLayout>
