--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -93,7 +93,7 @@
                     android:gravity="left"
                     android:inputType="textPassword"
                     android:lines="1"
-                    android:maxLines="11"
+                    android:maxLength="20"
                     android:padding="@dimen/outside_margin"
                     android:textColor="@color/title_color"
                     android:textColorHint="@color/hint_color"
@@ -134,7 +134,7 @@
                     android:gravity="left"
                     android:inputType="textPassword"
                     android:lines="1"
-                    android:maxLines="11"
+                    android:maxLength="20"
                     android:padding="@dimen/outside_margin"
                     android:textColor="@color/title_color"
                     android:textColorHint="@color/hint_color"
