--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,7 +92,7 @@
                     android:gravity="left"
                     android:inputType="textPassword"
                     android:lines="1"
-                    android:maxLines="11"
+                    android:maxLength="20"
                     android:padding="@dimen/outside_margin"
                     android:textColor="@color/title_color"
                     android:textColorHint="@color/hint_color"
