--- a/app/src/main/res/layout/activity_mine_apply_enter.xml
+++ b/app/src/main/res/layout/activity_mine_apply_enter.xml
@@ -96,7 +96,7 @@
                         android:gravity="left"
                         android:inputType="phone"
                         android:lines="1"
-                        android:maxLines="11"
+                        android:maxLength="11"
                         android:padding="@dimen/outside_margin"
                         android:textColor="@color/title_color"
                         android:textColorHint="@color/hint_color"
@@ -138,6 +138,7 @@
                         android:gravity="left"
                         android:inputType="textMultiLine"
                         android:lines="1"
+                        android:maxLines="1"
                         android:padding="@dimen/outside_margin"
                         android:textColor="@color/title_color"
                         android:textColorHint="@color/hint_color"
@@ -167,9 +168,9 @@
                     android:textSize="14sp" />
 
                 <LinearLayout
-                    android:padding="13dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="13dp">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/apply_list"
@@ -201,7 +202,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <com.xingguang.localrun.view.ClearEditText
+                    <TextView
                         android:id="@+id/apply_pullimg"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -218,6 +219,15 @@
                         android:textSize="14sp"
                         android:theme="@style/MyEditText" />
 
+                    <ImageView
+                        android:id="@+id/iv_img"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="15dp"
+                        android:visibility="gone" />
+
                     <RelativeLayout
                         android:id="@+id/rl_shangchuan_img"
                         android:layout_width="85dp"
@@ -225,7 +235,8 @@
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
                         android:background="@drawable/btn_register_bg"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:visibility="visible">
 
                         <TextView
                             android:id="@+id/tv_shangchuan_img"
@@ -243,7 +254,7 @@
             <!--公司介绍-->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="202dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="13dp"
                 android:layout_marginRight="13dp"
                 android:layout_marginTop="@dimen/dp10"
@@ -260,27 +271,23 @@
                     android:textColor="@color/textGray"
                     android:textSize="14sp" />
 
-                <RelativeLayout
+                <com.xingguang.localrun.view.ClearEditText
+                    android:id="@+id/apply_jieshao"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="-71dp"
-                    android:layout_toRightOf="@+id/tv_jieshao"
-                    android:background="#fff">
+                    android:layout_marginLeft="@dimen/outside_margin"
+                    android:background="@null"
+                    android:gravity="top"
+                    android:inputType="textMultiLine"
+                    android:maxLength="200"
+                    android:minLines="6"
+                    android:padding="@dimen/outside_margin"
+                    android:textColor="@color/title_color"
+                    android:textColorHint="@color/hint_color"
+                    android:textCursorDrawable="@drawable/color_cursor"
+                    android:textSize="14sp"
+                    android:theme="@style/MyEditText" />
 
-                    <com.xingguang.localrun.view.ClearEditText
-                        android:id="@+id/apply_jieshao"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layout_marginLeft="@dimen/outside_margin"
-                        android:background="@null"
-                        android:inputType="textMultiLine"
-                        android:padding="@dimen/outside_margin"
-                        android:textColor="@color/title_color"
-                        android:textColorHint="@color/hint_color"
-                        android:textCursorDrawable="@drawable/color_cursor"
-                        android:textSize="14sp"
-                        android:theme="@style/MyEditText" />
-                </RelativeLayout>
             </LinearLayout>
 
 
