--- a/app/src/main/res/layout/activity_modification.xml
+++ b/app/src/main/res/layout/activity_modification.xml
@@ -26,11 +26,74 @@
             android:layout_height="match_parent"
             android:background="@null"
             android:maxLines="1"
+            android:hint=""
             android:textColorHint="@color/textLightGray"
             android:textColor="@color/textBlack"
             android:textSize="14sp"
             />
     </RelativeLayout>
+
+    <!--验证码-->
+    <LinearLayout
+        android:id="@+id/ll_sms"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="验证码"
+            android:textColor="@color/textBlack"
+            android:textSize="14sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.xingguang.localrun.view.ClearEditText
+                android:id="@+id/register_mss"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/outside_margin"
+                android:layout_toLeftOf="@+id/rl_get_messs"
+                android:background="@null"
+                android:inputType="number"
+                android:lines="1"
+                android:maxLines="6"
+                android:padding="@dimen/outside_margin"
+                android:textColor="@color/title_color"
+                android:textColorHint="@color/hint_color"
+                android:textCursorDrawable="@drawable/color_cursor"
+                android:textSize="14sp"
+                android:theme="@style/MyEditText" />
+
+            <RelativeLayout
+                android:id="@+id/rl_get_messs"
+                android:layout_width="85dp"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/btn_register_bg"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/tv_regis_getmss"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:text="获取验证码"
+                    android:textColor="@color/textBlack"
+                    android:textSize="12sp" />
+            </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +106,7 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/corners30_solidgreen"
             android:gravity="center"
-            android:text="注销账户"
+            android:text="提  交"
             android:textColor="#fff"
             android:textSize="16sp" />
     </LinearLayout>
