--- a/app/src/main/res/layout/item_home_daiban.xml
+++ b/app/src/main/res/layout/item_home_daiban.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:text="新竹-汽贸城"
+            android:text=""
             android:textColor="@color/textBlack"
             android:textSize="16sp" />
 
@@ -47,6 +47,7 @@
 
 
     <TextView
+        android:id="@+id/item_tvdes"
         android:layout_margin="@dimen/dp10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,6 +68,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/tv_statrtime"
                 android:paddingBottom="2dp"
                 android:paddingRight="@dimen/dp10"
                 android:paddingLeft="@dimen/dp10"
@@ -84,6 +86,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv_endtime"
             android:paddingBottom="2dp"
             android:paddingRight="@dimen/dp10"
             android:paddingLeft="@dimen/dp10"
