--- a/app/src/main/res/layout/item_my_daibanmore.xml
+++ b/app/src/main/res/layout/item_my_daibanmore.xml
@@ -20,7 +20,7 @@
             android:id="@+id/item_tv_ads"
             android:textSize="14sp"
             android:textColor="@color/textBlack"
-            android:text="新租客的积分看见爱上大路口附近是的离开房间"
+            android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
