--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -18,7 +18,6 @@
             android:id="@+id/item_iv_backimg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/home_bule"
             />
 
         <RelativeLayout
@@ -35,7 +34,7 @@
                 android:id="@+id/tv_shop_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="¥799"
+                android:text="¥"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
         </RelativeLayout>
