--- a/app/src/main/res/layout/item_home_daigou.xml
+++ b/app/src/main/res/layout/item_home_daigou.xml
@@ -20,7 +20,8 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:background="@color/textBlack"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true" />
 
         <TextView
             android:id="@+id/item_tv_name"
