--- a/app/src/main/res/layout/item_lookshop_all.xml
+++ b/app/src/main/res/layout/item_lookshop_all.xml
@@ -74,28 +74,49 @@
 
         <!--店铺简介-->
         <RelativeLayout
+            android:padding="13dp"
             android:background="@color/white"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:layout_centerVertical="true"
+                android:id="@+id/iv_logo"
+                android:layout_width="35dp"
+                android:layout_height="35dp" />
             <TextView
-                android:textSize="16sp"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/iv_logo"
+                android:id="@+id/tv_name"
+                android:textSize="14sp"
+                android:layout_centerVertical="true"
                 android:textColor="@color/textBlack"
-                android:text="店铺简介"
-                android:layout_centerInParent="true"
+                android:text=""
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
             <TextView
+                android:id="@+id/tv_attention"
+                android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/dp10"
                 android:gravity="right"
-                android:textSize="16sp"
-                android:textColor="@color/textGray"
+                android:textSize="12sp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_centerVertical="true"
+                android:textColor="@color/white"
                 android:text="关注"
-                android:layout_width="match_parent"
+                android:background="@drawable/bg_red"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
         </RelativeLayout>
+
+        <View
+            android:background="@color/board"
+            android:layout_width="match_parent"
+            android:layout_height="8dp" />
 
         <!--好评率-->
         <LinearLayout
@@ -145,10 +166,11 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/item_tv_time"
                 android:layout_marginLeft="@dimen/dp10"
                 android:textColor="@color/textGray"
                 android:textSize="14sp"
-                android:text="2018年5月23日"
+                android:text=""
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -174,6 +196,9 @@
                 android:layout_height="wrap_content" />
 
             <ImageView
+                android:id="@+id/item_iv_zizhi"
+                android:scaleType="fitXY"
+                android:adjustViewBounds="true"
                 android:background="@color/home_bule"
                 android:layout_width="180dp"
                 android:layout_height="210dp" />
