--- a/app/src/main/res/layout/item_shop.xml
+++ b/app/src/main/res/layout/item_shop.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="6dp"
     android:layout_marginTop="6dp"
     android:orientation="vertical"
-    android:layout_height="wrap_content"
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
 
@@ -14,11 +14,11 @@
         android:layout_height="160dp">
 
         <ImageView
-            android:scaleType="centerCrop"
             android:id="@+id/item_iv_backimg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY" />
 
         <RelativeLayout
             android:id="@+id/rl_item_price"
@@ -26,9 +26,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:background="#6000"
-            android:padding="5dp"
-            android:layout_alignParentRight="true">
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/tv_shop_price"
