--- a/app/src/main/res/layout/item_my_collection.xml
+++ b/app/src/main/res/layout/item_my_collection.xml
@@ -30,8 +30,7 @@
                     android:id="@+id/item_iv_collect_img"
                     android:layout_width="85dp"
                     android:layout_height="85dp"
-                    android:background="@color/home_read"
-                    android:scaleType="centerCrop" />
+                    android:scaleType="fitXY" />
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -47,7 +46,7 @@
                         android:layout_gravity="top"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
-                        android:text="桂花鸭南京盐水鸭"
+                        android:text=""
                         android:textColor="@color/textBlack"
                         android:textSize="15sp" />
 
@@ -57,7 +56,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
-                        android:text="3052人收藏"
+                        android:text="人收藏"
                         android:textColor="@color/textDarkGray"
                         android:textSize="13sp" />
 
@@ -67,7 +66,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:gravity="center_vertical"
-                        android:text="¥55"
+                        android:text="¥"
                         android:textColor="@color/home_read"
                         android:textSize="13sp" />
                 </LinearLayout>
